--- a/VISIONTOOL/CODE/Default.html
+++ b/VISIONTOOL/CODE/Default.html
@@ -41,6 +41,19 @@
             <span class="tool">드라이버</span>
             <span class="tool">드라이버</span>
         </div>
+        <div id="container">
+
+        </div>
+        <div class="footer gray">
+            <div>
+                <span class="material-symbols-outlined iconSmall">call</span>
+                032-515-8024
+            </div>
+            <div>
+                <span class="material-symbols-outlined">location_on</span>
+                길주로 416-4 (길주로 416-4) 지번 : 산곡동 119-33
+            </div>
+        </div>
     </div>
 </body>
 </html>
