--- a/VISIONTOOL/CODE/main.html
+++ b/VISIONTOOL/CODE/main.html
@@ -71,17 +71,19 @@
                     <div class=lineSpace><a class="bold">신뢰할 수 있는 파트너</a>: 한번의 판매로 끝나지 않고, 지속적인 지원과 서비스로 고객님의 곁을 지키겠습니다.</div>
                     <div class=lineSpace>당신의 손에서 시작되는 위대한 창조의 여정, 비전툴이 가장 든든한 힘이 되어드리겠습니다.</div>
                 </div>
-                <div class="gray">
+                <div>
                     <img src="https://i.postimg.cc/NLvr0qGt/image.png" class="companyMap">
-                    <div>
-                        <span class="material-symbols-outlined iconSmall">call</span>
-                        032-515-8024
-                    </div>
-                    <div>
-                        <span class="material-symbols-outlined">location_on</span>
-                        길주로 416-4 (길주로 416-4) 지번 : 산곡동 119-33
-                    </div>
                 </div>
+            </div>
+        </div>
+        <div class="footer gray">
+            <div>
+                <span class="material-symbols-outlined iconSmall">call</span>
+                032-515-8024
+            </div>
+            <div>
+                <span class="material-symbols-outlined">location_on</span>
+                길주로 416-4 (길주로 416-4) 지번 : 산곡동 119-33
             </div>
         </div>
     </div>
