--- a/VISIONTOOL/CODE/edit-product.html
+++ b/VISIONTOOL/CODE/edit-product.html
@@ -16,40 +16,44 @@
     <div id="app">
         <!-- html 코드는 id가 app인 태그 안에서 작업 -->
         <div id="title">
-            <div id="title-Search">
-                <input type="text" class="inputBox">
-                <span class="material-symbols-outlined search iconSmall">search</span>
+            <div id="title-admin">
+                <a class="cursor" @click="fnAddProduct">상품 등록</a>
+                <a class="cursor" @click="fnEditProduct">상품 수정</a>
             </div>
             <div id="WebName">
-                <a @click="fnMain" class="noDeco">
+                <a href="admin-main.html" class="noDeco">
                     <span class="nanum-gothic-regular">비전툴 </span>  
                     <span class="nanum-gothic-extrabold"> VISIONTOOL</span>
                 </a>
             </div>
-            <div id="rightBox">
-                <span class="rightBox-Text" v-if="userId == ''" @click="fnLoginPage">로그인 </span>
-                <span v-if="userId != ''" class="rightBox-Text" @click="fnLogout">로그아웃 </span>
-                <span v-if="userId != ''" class="rightBox-Text" @click="fnMyPage">마이페이지 </span>
-                <span class="material-symbols-outlined rightBox-icon">shopping_cart</span>
+            <div id="admin-rightBox">
+                <span @click="fnLogout" class="cursor">로그아웃 </span>
             </div>
         </div>
-        <div id="category">
-            <span class="tool" @click="fnShowTool('')">전체보기</span>
-            <span class="tool" @click="fnShowTool('전동공구')">전동공구</span>
-            <span class="tool" @click="fnShowTool('수공구')">수공구</span>
-            <span class="tool" @click="fnShowTool('측량공구')">계측공구</span>
+        <div class="big-search">
+            <input type="text" class="big-input">
+            <span class="material-symbols-outlined iconSmall bold white">search</span>
         </div>
-        <div id="container">
-            <div class="userBox">
-                <div class="nanum-gothic-extrabold detailTitle">로그인</div>
-                <div class="lineSpace">
-                    아이디 : <input type="text" v-model="userId">
-                </div>
-                <div class="lineSpace">
-                    비밀번호 : <input type="password" v-model="userPsd">
-                </div>
-                <button @click="fnLogin">로그인</button>
-                <button @click="fnJoinPage">회원가입</button>
+        <hr>
+        <div id="admin-container">
+            <div>
+                <div class="nanum-gothic-extrabold detailTitle white"><a class="cursor">상품 리스트</a></div>
+                    <table>
+                        <tr>
+                            <th>상품 번호</th>
+                            <th>상품 이름</th>
+                            <th>상품 종류</th>
+                            <th>상품 가격</th>
+                            <th>상품 개수</th>
+                        </tr>
+                        <tr v-for="item in productList">
+                            <td>{{item.PRODUCT_ID}}</td>
+                            <td><a href="javascript:;" @click="fnProductEdit(item.PRODUCT_ID)">{{item.PRODUCT_NAME}}</a></td>
+                            <td>{{item.TYPE}}</td>
+                            <td>{{item.PRICE}}</td>
+                            <td>{{item.STOCK}}</td>
+                        </tr>
+                    </table>
             </div>
         </div>
         <div class="footer gray">
@@ -73,48 +77,51 @@
                 // 변수 - (key : value)
                 loginFlg : false,
                 userId : "",
-                userPsd : ""
+                productList : [],
+                QNAList : [],
+                offset : 0,
+                pageSize : 10
             };
         },
         methods: {
             // 함수(메소드) - (key : function())
-            fnLogin: function () {
+            fnProductList: function () {
                 let self = this;
-                let param = {
-                    userId : self.userId,
-                    userPsd : self.userPsd
-                };
-                console.log(self.userId);
-                
                 $.ajax({
-                    url: "http://localhost:3009/tools/login",
+                    url: "http://localhost:3009/tools/product/list",
                     dataType: "json",
                     type: "GET",
-                    data: param,
+                    data: {
+                        offset : self.offset,
+                        pageSize : self.pageSize
+                    },   
                     success: function (data) {
-                        console.log(data);
-                        if(data.info == null){
-                            alert("아이디/비밀번호가 잘못되었습니다!")
-                            return;
-                        }
-                        location.href="main.html?userId="+data.info.USER_ID;
+                        console.log(data.boardList[0]);
+                        self.productList = data.boardList;
                     }
                 });
-            },
-            fnJoinPage(){
-                location.href="join.html";
             },
             fnLoginPage(){
                 location.href="login.html";
             },
-            fnShowTool(type){
-                let self = this;
-                location.href=`toolList.html?userId=${self.userId}&type=${type}`;
+            fnLogout(){
+                location.href="main.html";
+            },
+            fnAddProduct(){
+                location.href="add-product.html";
+            },
+            fnEditProduct(){
+                location.href="edit-product.html";
+            },
+            fnProductEdit(productId){
+                location.href="go-edit-product.html?productId="+productId;
             }
         }, // methods
         mounted() {
             // 처음 시작할 때 실행되는 부분
             let self = this;
+            
+            self.fnProductList();
         }
     });
 
