--- a/VISIONTOOL/CODE/user-qna.html
+++ b/VISIONTOOL/CODE/user-qna.html
@@ -17,8 +17,8 @@
         <!-- html 코드는 id가 app인 태그 안에서 작업 -->
         <div id="title">
             <div id="title-Search">
-                <input type="text" class="inputBox">
-                <span class="material-symbols-outlined search iconSmall">search</span>
+                <input type="text" class="inputBox" v-model="search">
+                <span class="material-symbols-outlined search iconSmall" @click="fnSearch">search</span>
             </div>
             <div id="WebName">
                 <a @click="fnMain" class="noDeco">
@@ -29,7 +29,7 @@
             <div id="rightBox">
                 <span class="rightBox-Text" @click="fnLogout">로그아웃 </span>
                 <span class="rightBox-Text" @click="fnMyPage">마이페이지 </span>
-                <span class="material-symbols-outlined rightBox-icon">shopping_cart</span>
+                <span class="material-symbols-outlined rightBox-icon" @click="fnGoCart">shopping_cart</span>
             </div>
         </div>
         <div id="left_container">
@@ -72,7 +72,8 @@
                 // 변수 - (key : value)
                 loginFlg : true,
                 userId : "",
-                info : {}
+                info : {},
+                search : ""
             };
         },
         methods: {
@@ -113,8 +114,16 @@
             },
             fnMain(){
                 let self = this;
-                location.href=`main.html?userId=${userId}`;
-            }
+                location.href=`main.html?userId=${self.userId}`;
+            },
+            fnGoCart(){
+                let self = this;
+                location.href=`cart-list.html?userId=${self.userId}`;
+            },
+            fnSearch(){
+                let self = this;
+                location.href=`toolList.html?userId=${self.userId}&search=${self.search}`
+            } 
         }, // methods
         mounted() {
             // 처음 시작할 때 실행되는 부분
