--- a/VISIONTOOL/CODE/main.html
+++ b/VISIONTOOL/CODE/main.html
@@ -17,8 +17,8 @@
         <!-- html 코드는 id가 app인 태그 안에서 작업 -->
         <div id="title">
             <div id="title-Search">
-                <input type="text" class="inputBox">
-                <span class="material-symbols-outlined search iconSmall">search</span>
+                <input type="text" class="inputBox" v-model="search">
+                <span class="material-symbols-outlined search iconSmall" @click="fnSearch">search</span>
             </div>
             <div id="WebName">
                 <a @click="fnMain" class="noDeco">
@@ -30,7 +30,7 @@
                 <span class="rightBox-Text" v-if="userId == ''" @click="fnLoginPage">로그인 </span>
                 <span v-if="userId != ''" class="rightBox-Text" @click="fnLogout">로그아웃 </span>
                 <span v-if="userId != ''" class="rightBox-Text" @click="fnMyPage">마이페이지 </span>
-                <span class="material-symbols-outlined rightBox-icon">shopping_cart</span>
+                <span v-if="userId != ''" class="material-symbols-outlined rightBox-icon" @click="fnGoCart">shopping_cart</span>
             </div>
         </div>
         <div id="category">
@@ -95,7 +95,8 @@
                 // 변수 - (key : value)
                 loginFlg : false,
                 userId : "",
-                imgNum : 1
+                imgNum : 1,
+                search : ""
             };
         },
         methods: {
@@ -167,6 +168,14 @@
             fnShowTool(type){
                 let self = this;
                 location.href=`toolList.html?userId=${self.userId}&type=${type}`;
+            },
+            fnGoCart(){
+                let self = this;
+                location.href=`cart-list.html?userId=${self.userId}`;
+            },
+            fnSearch(){
+                let self = this;
+                location.href=`toolList.html?userId=${self.userId}&search=${self.search}`
             }
         }, // methods
         mounted() {
